updated readme, fixed spacing issues for yearly data

--- a/frontend/src/components/projects/history.css
+++ b/frontend/src/components/projects/history.css
@@ -241,7 +241,8 @@
 /* Year Section */
 .year-main {
     display: flex;
-    width: 73vh;
+    width: 100%;
+    padding: 0 1vw;
     animation: fadeIn 1s;
     justify-content: space-between;
     align-items: center;
